# github-runner-manager

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  main.py  pyproject.toml  runners_config.yaml  runners_config.yaml.dist
.github/workflows/: ci.yml
config/: Dockerfile.node20  Dockerfile.php83  Dockerfile.sample  README.md
docs/: scheduler.md  workflow.md
infra/docker/: entrypoint.sh  supervisord.conf
src/notifications/: dispatcher.py  events.py  factory.py
src/notifications/channels/: base.py  webhook.py
src/presentation/: __init__.py
src/presentation/cli/: __init__.py  commands.py  main.py  webhook_commands.py
src/services/: __init__.py  config_schema.py  config_service.py  docker_logger.py  docker_service.py  notification_service.py  scheduler_service.py  webhook_service.py
tests/: conftest.py  test_cli_main.py  test_config_service.py  test_main.py
tests/cli/: test_commands_build_start_stop_remove.py  test_commands_check_base_image_update.py  test_commands_list_runners.py  test_commands_scheduler.py
tests/docker_service/: test_core.py  test_edges.py  test_logging.py  test_progress.py  test_regressions.py  test_step_line.py  test_workflows.py
tests/notifications/: test_factory_events.py
tests/presentation/cli/: test_webhook_commands.py  test_webhook_commands_unit.py
tests/services/: conftest.py  test_docker_logger.py  test_docker_service_core.py  test_docker_service_edges.py  test_docker_service_regressions.py  test_docker_service_workflows.py  test_notification_service.py  test_scheduler_service.py  test_webhook_service.py
